backend/backend_final_v4.log

> backend@1.0.0 dev
> nodemon server.js

[33m[nodemon] 3.1.11[39m
[33m[nodemon] to restart at any time, enter `rs`[39m
[33m[nodemon] watching path(s): *.*[39m
[33m[nodemon] watching extensions: js,mjs,cjs,json[39m
[32m[nodemon] starting `node server.js`[39m
[dotenv@17.2.3] injecting env (3) from .env -- tip: ­¤öä add secrets lifecycle management: https://dotenvx.com/ops
[dotenv@17.2.3] injecting env (0) from .env -- tip: ­¤øĀ’ĖÅ  run anywhere with `dotenvx run -- yourcommand`
/Users/abdulgaffarbello/ACETEL Digital Thesis Repository System (ADTRS)/backend/controllers/thesisController.js:307
};
^

SyntaxError: Unexpected token '}'
    at wrapSafe (node:internal/modules/cjs/loader:1464:18)
    at Module._compile (node:internal/modules/cjs/loader:1495:20)
    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)
    at Module.load (node:internal/modules/cjs/loader:1266:32)
    at Module._load (node:internal/modules/cjs/loader:1091:12)
    at Module.require (node:internal/modules/cjs/loader:1289:19)
    at require (node:internal/modules/helpers:182:18)
    at Object.<anonymous> (/Users/abdulgaffarbello/ACETEL Digital Thesis Repository System (ADTRS)/backend/routes/thesisRoutes.js:2:125)
    at Module._compile (node:internal/modules/cjs/loader:1521:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)

Node.js v20.20.0
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node server.js`[39m
[32m[nodemon] restarting due to changes...[39m
[dotenv@17.2.3] injecting env (3) from .env -- tip: ŌÜÖ’ĖÅ  load multiple .env files with { path: ['.env.local', '.env'] }
[dotenv@17.2.3] injecting env (0) from .env -- tip: Ō£ģ audit secrets and track compliance: https://dotenvx.com/ops
/Users/abdulgaffarbello/ACETEL Digital Thesis Repository System (ADTRS)/backend/controllers/thesisController.js:307
};
^

SyntaxError: Unexpected token '}'
    at wrapSafe (node:internal/modules/cjs/loader:1464:18)
    at Module._compile (node:internal/modules/cjs/loader:1495:20)
    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)
    at Module.load (node:internal/modules/cjs/loader:1266:32)
    at Module._load (node:internal/modules/cjs/loader:1091:12)
    at Module.require (node:internal/modules/cjs/loader:1289:19)
    at require (node:internal/modules/helpers:182:18)
    at Object.<anonymous> (/Users/abdulgaffarbello/ACETEL Digital Thesis Repository System (ADTRS)/backend/routes/thesisRoutes.js:2:125)
    at Module._compile (node:internal/modules/cjs/loader:1521:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)

Node.js v20.20.0
[32m[nodemon] starting `node server.js`[39m
[dotenv@17.2.3] injecting env (3) from .env -- tip: ŌÜÖ’ĖÅ  write to custom object with { processEnv: myObject }
[dotenv@17.2.3] injecting env (0) from .env -- tip: ­¤öÉ prevent building .env in docker: https://dotenvx.com/prebuild
/Users/abdulgaffarbello/ACETEL Digital Thesis Repository System (ADTRS)/backend/controllers/thesisController.js:307
};
^

SyntaxError: Unexpected token '}'
    at wrapSafe (node:internal/modules/cjs/loader:1464:18)
    at Module._compile (node:internal/modules/cjs/loader:1495:20)
    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)
    at Module.load (node:internal/modules/cjs/loader:1266:32)
    at Module._load (node:internal/modules/cjs/loader:1091:12)
    at Module.require (node:internal/modules/cjs/loader:1289:19)
    at require (node:internal/modules/helpers:182:18)
    at Object.<anonymous> (/Users/abdulgaffarbello/ACETEL Digital Thesis Repository System (ADTRS)/backend/routes/thesisRoutes.js:2:125)
    at Module._compile (node:internal/modules/cjs/loader:1521:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)

Node.js v20.20.0
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node server.js`[39m
[dotenv@17.2.3] injecting env (3) from .env -- tip: ŌÜÖ’ĖÅ  write to custom object with { processEnv: myObject }
[dotenv@17.2.3] injecting env (0) from .env -- tip: ­¤öæ add access controls to secrets: https://dotenvx.com/ops
/Users/abdulgaffarbello/ACETEL Digital Thesis Repository System (ADTRS)/backend/controllers/thesisController.js:307
};
^

SyntaxError: Unexpected token '}'
    at wrapSafe (node:internal/modules/cjs/loader:1464:18)
    at Module._compile (node:internal/modules/cjs/loader:1495:20)
    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)
    at Module.load (node:internal/modules/cjs/loader:1266:32)
    at Module._load (node:internal/modules/cjs/loader:1091:12)
    at Module.require (node:internal/modules/cjs/loader:1289:19)
    at require (node:internal/modules/helpers:182:18)
    at Object.<anonymous> (/Users/abdulgaffarbello/ACETEL Digital Thesis Repository System (ADTRS)/backend/routes/thesisRoutes.js:2:125)
    at Module._compile (node:internal/modules/cjs/loader:1521:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)

Node.js v20.20.0
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node server.js`[39m
[dotenv@17.2.3] injecting env (3) from .env -- tip: ­¤öÉ prevent building .env in docker: https://dotenvx.com/prebuild
[dotenv@17.2.3] injecting env (0) from .env -- tip: ŌÜÖ’ĖÅ  load multiple .env files with { path: ['.env.local', '.env'] }
/Users/abdulgaffarbello/ACETEL Digital Thesis Repository System (ADTRS)/backend/controllers/thesisController.js:307
};
^

SyntaxError: Unexpected token '}'
    at wrapSafe (node:internal/modules/cjs/loader:1464:18)
    at Module._compile (node:internal/modules/cjs/loader:1495:20)
    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)
    at Module.load (node:internal/modules/cjs/loader:1266:32)
    at Module._load (node:internal/modules/cjs/loader:1091:12)
    at Module.require (node:internal/modules/cjs/loader:1289:19)
    at require (node:internal/modules/helpers:182:18)
    at Object.<anonymous> (/Users/abdulgaffarbello/ACETEL Digital Thesis Repository System (ADTRS)/backend/routes/thesisRoutes.js:2:125)
    at Module._compile (node:internal/modules/cjs/loader:1521:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)

Node.js v20.20.0
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node server.js`[39m
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node server.js`[39m
[dotenv@17.2.3] injecting env (3) from .env -- tip: ŌÜÖ’ĖÅ  suppress all logs with { quiet: true }
[dotenv@17.2.3] injecting env (0) from .env -- tip: ŌÜÖ’ĖÅ  override existing env vars with { override: true }
/Users/abdulgaffarbello/ACETEL Digital Thesis Repository System (ADTRS)/backend/controllers/thesisController.js:307
};
^

SyntaxError: Unexpected token '}'
    at wrapSafe (node:internal/modules/cjs/loader:1464:18)
    at Module._compile (node:internal/modules/cjs/loader:1495:20)
    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)
    at Module.load (node:internal/modules/cjs/loader:1266:32)
    at Module._load (node:internal/modules/cjs/loader:1091:12)
    at Module.require (node:internal/modules/cjs/loader:1289:19)
    at require (node:internal/modules/helpers:182:18)
    at Object.<anonymous> (/Users/abdulgaffarbello/ACETEL Digital Thesis Repository System (ADTRS)/backend/routes/thesisRoutes.js:2:125)
    at Module._compile (node:internal/modules/cjs/loader:1521:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)

Node.js v20.20.0
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
